# maome

./: .gitignore  README.md  pyproject.toml
src/: PTS-0001.csv  maomé.py
