[tool.poetry]
name = "maome"
version = "0.1.0"
description = ""
authors = ["Ralph Ribeiro <rrdias@topaz.com.br>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.21.2"
scipy = "^1.7.1"
pandas = "^1.3.3"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
autopep8 = "^1.5.7"
rope = "^0.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
